# sulfur

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.yml
src/: main.rs
src/config/: config.rs  config_reader.rs  mod.rs
src/core/: engine.rs  mod.rs  select_engine.rs
src/engine/: big_query.rs  elasticsearch.rs  mod.rs  mongo.rs  redis.rs  sqlite.rs
src/reactor/: reactor.rs
src/transform/: python.rs
sulfur/: Cargo.toml
sulfur-api/: Cargo.toml
sulfur-api/src/: main.rs
sulfur-base/: Cargo.toml
sulfur-base/src/: lib.rs
sulfur-base/src/engine/: engine.rs
sulfur-base/src/flow/: flow.rs
sulfur-common/: Cargo.toml
sulfur-common/src/config/: config.rs
sulfur-config/: Cargo.toml
sulfur-config/src/: config_reader.rs
sulfur-engine/: Cargo.toml
sulfur-engine/src/: big_query.rs  elasticsearch.rs  mongo.rs  redis.rs
sulfur-persistence/: Cargo.toml
sulfur-persistence/src/: lib.rs
sulfur-transform/: Cargo.toml
sulfur-transform/src/: python.rs
sulfur/src/: lib.rs  main.rs
sulfur/src/core/: engine.rs  mod.rs  select_engine.rs
sulfur/src/engine/: big_query.rs  elasticsearch.rs  mod.rs  mongo.rs  redis.rs
sulfur/src/reactor/: reactor.rs
