[package]
name = "sulfur-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { version = "0.23.0", features = ["tokio-comp"] }
gcp-bigquery-client = { version = "0.17.0", features = ["native-tls"] }
elasticsearch = "8.5.0-alpha.1"
mongodb = { version = "2.6.0" }
serde_json = "1.0.114"
futures = "0.3.30"
async-trait = "0.1.77"
sulfur-base = { path = "../sulfur-base" }