[package]
name = "sulfur"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.71"
futures = "0.3.28"
serde = { version = "1.0.171" }
serde_json = { version = "1.0.102" }
serde_yaml = { version = "0.9.22" }
clap = { version = "4.3.11", features = ["derive"] }
sulfur-transform = { path = "../sulfur-transform" }
sulfur-base = { path = "../sulfur-base" }
sulfur-engine = {path = "../sulfur-engine"}
sulfur-persistence = {path = "../sulfur-persistence"}
log = "0.4.21"
pretty_env_logger = "0.5.0"